--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@
 # https://docs.travis-ci.com/user/ci-environment/#Virtualization-environments
 sudo: required
 dist: trusty
+addons:
+  apt:
+    packages:
+      - mysql-server-5.6
+      - mysql-client-core-5.6
+      - mysql-client-5.6
 
 cache:
   directories:
