--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>OpenTracing-JDBI</name>
@@ -11,7 +9,7 @@
 
     <groupId>io.opentracing.contrib</groupId>
     <artifactId>opentracing-jdbi</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.9</version>
     <build>
         <plugins>
             <plugin>
@@ -62,7 +60,7 @@
         <url>https://github.com/opentracing-contrib/java-jdbi</url>
         <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
         <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>0.0.9</tag>
     </scm>
 
     <developers>
