--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.opentracing.contrib</groupId>
     <artifactId>opentracing-jdbi</artifactId>
-    <version>0.0.9</version>
+    <version>0.0.10-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -60,7 +60,7 @@
         <url>https://github.com/opentracing-contrib/java-jdbi</url>
         <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
         <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</developerConnection>
-        <tag>0.0.9</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
