--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,22 @@
         </developer>
     </developers>
 
+    <distributionManagement>
+        <repository>
+            <id>bintray</id>
+            <url>https://api.bintray.com/maven/opentracing/maven/opentracing-jdbi/;publish=1</url>
+        </repository>
+        <snapshotRepository>
+            <id>jfrog-snapshots</id>
+            <url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/opentracing-contrib/java-jdbi/issues</url>
+    </issueManagement>
+
     <dependencies>
 
         <!-- core dependencies: -->
