--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.opentracing</groupId>
     <artifactId>opentracing-jdbi</artifactId>
-    <version>0.0.16-SNAPSHOT</version>
+    <version>0.0.16</version>
     <build>
         <pluginManagement>
             <plugins>
@@ -93,7 +93,7 @@
         <url>https://github.com/opentracing-contrib/java-jdbi</url>
         <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
         <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>0.0.16</tag>
     </scm>
 
     <developers>
