--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>OpenTracing-JDBI</name>
     <description>OpenTracing Instrumentation for JDBI</description>
+    <groupId>io.opentracing.contrib</groupId>
+    <artifactId>jdbi-opentracing</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/opentracing-contrib/java-jdbi</url>
-    <inceptionYear>2016</inceptionYear>
+
+    <version>0.1.2</version>
 
     <organization>
         <name>OpenTracing</name>
         <url>http://opentracing.io/</url>
     </organization>
+
+    <packaging>jar</packaging>
 
     <licenses>
         <license>
@@ -20,13 +25,6 @@
         </license>
     </licenses>
 
-    <scm>
-        <url>https://github.com/opentracing-contrib/java-jdbi</url>
-        <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
-        <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
-
     <developers>
         <developer>
             <id>bensigelman</id>
@@ -35,101 +33,11 @@
         </developer>
     </developers>
 
-    <properties>
-        <jdbi.version>2.74</jdbi.version>
-        <opentracing.version>0.14.0</opentracing.version>
-        <mysql.version>5.1.6</mysql.version>
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
-        <maven-plugin.version>0.3.3</maven-plugin.version>
-        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
-        <maven-source-plugin.version>3.0.0</maven-source-plugin.version>
-        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-        <centralsync-maven-plugin.version>0.1.0</centralsync-maven-plugin.version>
-    </properties>
-
-    <groupId>io.opentracing</groupId>
-    <artifactId>opentracing-jdbi</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
-    <build>
-        <pluginManagement>
-            <plugins>
-                <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.3.9 -->
-                <plugin>
-                    <groupId>io.takari</groupId>
-                    <artifactId>maven</artifactId>
-                    <version>${maven-plugin.version}</version>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${maven-jar-plugin.version}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>io.zipkin.centralsync-maven-plugin</groupId>
-                <artifactId>centralsync-maven-plugin</artifactId>
-                <version>${centralsync-maven-plugin.version}</version>
-                <configuration>
-                    <subject>opentracing</subject>
-                    <repo>maven</repo>
-                    <packageName>opentracing-jdbi</packageName>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven-release-plugin.version}</version>
-                <configuration>
-                    <useReleaseProfile>false</useReleaseProfile>
-                    <releaseProfiles>release</releaseProfiles>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
-
-            <!-- Ensures checksums are added to published jars -->
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>${maven-install-plugin.version}</version>
-                <configuration>
-                    <createChecksum>true</createChecksum>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <distributionManagement>
-        <repository>
-            <id>bintray</id>
-            <url>https://api.bintray.com/maven/opentracing/maven/opentracing-jdbi/;publish=1</url>
-        </repository>
-        <snapshotRepository>
-            <id>jfrog-snapshots</id>
-            <url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <issueManagement>
-        <system>Github</system>
-        <url>https://github.com/opentracing-contrib/java-jdbi/issues</url>
-    </issueManagement>
+    <scm>
+        <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
+        <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</developerConnection>
+        <url>https://github.com/opentracing-contrib/java-jdbi/tree/master</url>
+    </scm>
 
     <dependencies>
 
@@ -167,47 +75,80 @@
 
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <!-- Creates source jar -->
-                    <plugin>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>${maven-source-plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
-                    <!-- Creates javadoc jar, skipping internal classes -->
-                    <plugin>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${maven-javadoc-plugin.version}</version>
-                        <configuration>
-                            <failOnError>false</failOnError>
-                            <excludePackageNames>io.opentracing.internal,io.opentracing.internal.*
-                            </excludePackageNames>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <jdbi.version>2.74</jdbi.version>
+        <opentracing.version>0.14.0</opentracing.version>
+        <mysql.version>5.1.6</mysql.version>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
+
+    <issueManagement>
+        <system>Github</system>
+        <url>https://github.com/opentracing-contrib/java-jdbi/issues</url>
+    </issueManagement>
 
 </project>
