Update version for release, update travis config (#6)
* Add "collector chain" option to OpenTracingCollector.

Adds a new constructor param - an optional TimingCollector `next`.
When `#collect` is called on OpenTracingCollector, it will also be called on `#next`.

Also add and update Javadocs, update annotations.

* Prepare for 0.3.0 release

* Update version for new snapshots.

* Skip signing on travis builds

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/opentracing-contrib/java-jdbi</url>
 
-    <version>0.2.0</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <organization>
         <name>OpenTracing</name>
@@ -30,6 +30,11 @@
             <id>bensigelman</id>
             <name>Ben Sigelman</name>
             <email>bhs@lightstep.com</email>
+        </developer>
+        <developer>
+            <id>joeblubaugh_lightstep</id>
+            <name>Joe Blubaugh</name>
+            <email>joe@lightstep.com</email>
         </developer>
     </developers>
 
