--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.opentracing.contrib</groupId>
     <artifactId>jdbi-opentracing</artifactId>
-    <version>0.4.1</version>
+    <version>0.4.2-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>OpenTracing Instrumentation for JDBI</description>
@@ -30,7 +30,7 @@
         <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
         <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git
         </developerConnection>
-        <tag>0.4.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
