--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/opentracing-contrib/java-jdbi</url>
 
-    <version>0.4.2</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <organization>
         <name>OpenTracing</name>
