--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,13 @@
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi</artifactId>
             <version>${jdbi.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-core</artifactId>
             <version>${jdbi3.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
