--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <modules>
         <module>opentracing-jdbi</module>
-        <module>opentracing-jdb3</module>
+        <module>opentracing-jdbi3</module>
     </modules>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -78,8 +78,6 @@
     </issueManagement>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
@@ -156,6 +154,7 @@
                     <strictCheck>true</strictCheck>
                     <excludes>
                         <exclude>LICENSE</exclude>
+                        <exclude>Makefile</exclude>
                         <exclude>mvnw</exclude>
                         <exclude>mvnw.cmd</exclude>
                         <exclude>.mvn/wrapper/maven-wrapper.properties</exclude>
