--- a/opentracing-jdbi3/pom.xml
+++ b/opentracing-jdbi3/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>io.opentracing.contrib</groupId>
         <artifactId>jdbi-opentracing</artifactId>
-        <version>0.5.0</version>
+        <version>0.5.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>opentracing-jdbi3</artifactId>
