--- a/opentracing-jdbi3/pom.xml
+++ b/opentracing-jdbi3/pom.xml
@@ -38,6 +38,14 @@
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-core</artifactId>
         </dependency>
+
+        <dependency> <!-- Only used for (optional) automatic Plugin config -->
+            <groupId>io.opentracing</groupId>
+            <artifactId>opentracing-util</artifactId>
+            <version>${opentracing.version}</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
