Add unit tests to OpentracingJdbi3Plugin

--- a/opentracing-jdbi/pom.xml
+++ b/opentracing-jdbi/pom.xml
@@ -24,6 +24,7 @@
     </parent>
 
     <artifactId>opentracing-jdbi</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>OpenTracing Instrumentation for JDBI</description>
 
     <properties>
