--- a/opentracing-jdbi3/pom.xml
+++ b/opentracing-jdbi3/pom.xml
@@ -24,6 +24,7 @@
     </parent>
 
     <artifactId>opentracing-jdbi3</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>OpenTracing Instrumentation for JDBI 3</description>
 
     <properties>
@@ -45,6 +46,14 @@
             <version>${opentracing.version}</version>
             <scope>provided</scope>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>io.opentracing</groupId>
+            <artifactId>opentracing-util</artifactId>
+            <version>${opentracing.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
