--- a/opentracing-jdbi/pom.xml
+++ b/opentracing-jdbi/pom.xml
@@ -14,32 +14,34 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>io.opentracing.contrib</groupId>
-        <artifactId>jdbi-opentracing</artifactId>
-        <version>0.5.1-SNAPSHOT</version>
-    </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>io.opentracing.contrib</groupId>
+    <artifactId>jdbi-opentracing</artifactId>
+    <version>0.5.1-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>opentracing-jdbi</artifactId>
-    <name>${project.groupId}:${project.artifactId}</name>
-    <description>OpenTracing Instrumentation for JDBI</description>
+  <artifactId>opentracing-jdbi</artifactId>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>OpenTracing Instrumentation for JDBI</description>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
 
-        <jdbi.version>2.78</jdbi.version>
-    </properties>
+    <jdbi.version>2.78</jdbi.version>
+  </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jdbi</groupId>
-            <artifactId>jdbi</artifactId>
-            <version>${jdbi.version}</version>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.jdbi</groupId>
+      <artifactId>jdbi</artifactId>
+      <version>${jdbi.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
